# TFCardDemo

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: QTF_V0.002-1-g58c278b-dirty.aar  QTF_V0.002.aar  QTF_V0.004-6-g8f84edd.aar  Qasky_TF_Card.aar
app/src/androidTest/java/com/qasky/tfcarddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 量子安全移动存储介质密钥协商充注协议详细设计.docx
app/src/main/java/com/qasky/tfcarddemo/: App.java  MainActivity.java
app/src/main/java/com/qasky/tfcarddemo/dto/: AgreementFillQKeyRequest.java  (+18 more)
app/src/main/res/layout/: activity_main.xml  dialog_reset_params.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/qasky/tfcarddemo/: ExampleUnitTest.java
doc/: 在线业务密钥协商模块概要设计.doc
gradle/wrapper/: gradle-wrapper.properties
tfcard/: build.gradle
tfcard/src/androidTest/java/com/qasky/tfcard/: ExampleInstrumentedTest.java
tfcard/src/main/: AndroidManifest.xml
tfcard/src/main/cpp/: CMakeLists.txt  native-lib.cpp  qalg_sm4.c  qcard.cpp
tfcard/src/main/cpp/include/: SKF.h  SdCryptoStor.h  base_type.h  log.h  qalg_sm4.h  qcard.h  qcard_log.h  qcard_skf.h  qcard_store.h  qcard_type.h  skf_type.h
tfcard/src/main/cpp/include/curl/: curl.h  urlapi.h
tfcard/src/main/java/com/qasky/tfcard/: C2SNegotiateInfo.java  ConsultInfo.java  NegotiateInfo.java  OLNegoInfo.java  QCard.java  QTF.java  TFCard.java
tfcard/src/test/java/com/qasky/tfcard/: ExampleUnitTest.java
(+4 files in other folders)
